--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     
     <ul class="gallery list"></ul>
 
-    <button class="load-more-btn" type="button">load more</button>
+    <button class="load-more-btn is-hidden" type="button">load more</button>
     <script src="./index.js"></script>
     <script src="../node_modules/basiclightbox/dist/basicLightbox.min.js"></script>
   </body>
