--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!DOCTYPE html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Заголовок страницы</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin=""><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="/goit-js-hw-13-image-finder/PNotify.2afccc42.css" rel="stylesheet" type="text/css"><link href="/goit-js-hw-13-image-finder/PNotifyMobile.6c947af7.css" rel="stylesheet" type="text/css"><link rel="stylesheet" href="/goit-js-hw-13-image-finder/basicLightbox.min.c98a1735.css"><link rel="stylesheet" href="/goit-js-hw-13-image-finder/src.6e8b6f48.css"></head><body> <form class="search-form" id="search-form"> <input class="search-form_input" type="text" name="query" autocomplete="off" placeholder="Search images..."> </form> <ul class="gallery list"></ul> <button class="load-more-btn" type="button">load more</button> <script src="/goit-js-hw-13-image-finder/src.b0f9f67f.js"></script> <script src="/goit-js-hw-13-image-finder/basicLightbox.min.d12f35d1.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Заголовок страницы</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="/PNotify.268f30d4.css" rel="stylesheet" type="text/css">
+    <link href="/PNotifyMobile.c2bfca77.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/basicLightbox.min.89d46182.css">
+  <script src="/PNotify.268f30d4.js"></script><script src="/PNotifyMobile.c2bfca77.js"></script><script src="/basicLightbox.min.89d46182.js"></script><link rel="stylesheet" href="/src.e31bb0bc.css"></head>
+  <body>
+    <form class="search-form" id="search-form">
+      <input class="search-form_input" type="text" name="query" autocomplete="off" placeholder="Search images...">
+    </form>
+    
+    <ul class="gallery list"></ul>
+
+    <button class="load-more-btn is-hidden" type="button">load more</button>
+    <script src="/src.e31bb0bc.js"></script>
+    <script src="/basicLightbox.min.6c83412b.js"></script>
+  </body>
+</html>
